corrected file path to .yml extension

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@
 export SESSION_SECRET="change-me-to-random-string"
 
 # Path to your Glance configuration file
-export GLANCE_CONFIG_PATH="/opt/glance/glance.yaml"
+export GLANCE_CONFIG_PATH="/opt/glance/glance.yml"
 
 # Directory for configuration backups
 export BACKUP_DIR="/opt/glance-editor/backups"
